# rsrs

./: Cargo.toml  LICENSE  README.md
rsrs/: Cargo.toml
rsrs-derive/: Cargo.toml
rsrs-derive/src/: geo_field.rs  lib.rs  number_field.rs  tag_field.rs  text_field.rs  vector_field.rs
rsrs/src/: create.rs  document.rs  error.rs  lib.rs  query.rs
rsrs/src/field/: mod.rs  number_field.rs  text_field.rs  vector_field.rs
rsrs/tests/: test.rs
