[package]
name = "rsrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.15.0"
bytes = "1.6.0"
itertools = "0.12.1"
redis = { version = "0.25.3", features = [
    "tokio-comp",
    "tokio-rustls-comp",
    "json",
] }
rsrs-derive = { path = "../rsrs-derive" }
thiserror = "1.0.60"
